untertitel zu Musik geändert

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header class="hero">
     <img src="assets/img/logo.webp" alt="Handpan">
     <h1>Astrid's Kreativecke</h1>
-    <p>Handpan-Musik &amp; Zeichnungen</p>
+    <p>Musik &amp; Zeichnungen</p>
   </header>
 
   <section id="musik">
